--- a/celeba-gan.ipynb
+++ b/celeba-gan.ipynb
@@ -153,21 +153,21 @@
     "    model.add(layers.LeakyReLU())\n",
     "\n",
     "    model.add(layers.Reshape((8, 8, 256)))\n",
-    "    assert model.output_shape == (None, 8, 8, 256)\n",
+    "    # assert model.output_shape == (None, 8, 8, 256)\n",
     "\n",
     "    # Upsampling layers\n",
     "    model.add(layers.Conv2DTranspose(128, (5,5), strides=(2,2), padding='same', use_bias=False))\n",
-    "    assert model.output_shape == (None, 16, 16, 128)\n",
+    "    # assert model.output_shape == (None, 16, 16, 128)\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.LeakyReLU())\n",
     "\n",
     "    model.add(layers.Conv2DTranspose(64, (5,5), strides=(2,2), padding='same', use_bias=False))\n",
-    "    assert model.output_shape == (None, 32, 32, 64)\n",
+    "    # assert model.output_shape == (None, 32, 32, 64)\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.LeakyReLU())\n",
     "\n",
     "    model.add(layers.Conv2DTranspose(3, (5,5), strides=(2,2), padding='same', use_bias=False, activation='tanh'))\n",
-    "    assert model.output_shape == (None, 64, 64, 3)\n",
+    "    # assert model.output_shape == (None, 64, 64, 3)\n",
     "    return model\n",
     "\n",
     "generator = make_generator_model()"
@@ -191,7 +191,7 @@
     "    model.add(layers.Dropout(0.3))\n",
     "\n",
     "    model.add(layers.Flatten())\n",
-    "    model.add(layers.Dense(1))\n",
+    "    model.add(layers.Dense(1, activation='sigmoid'))\n",
     "    return model\n",
     "\n",
     "discriminator = make_discriminator_model()"
